--- a/Mogwarts/ladebalken.html
+++ b/Mogwarts/ladebalken.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="Style/background_styles.css">
-    <link rel="stylesheet" href="Style/styleladebalken.css">
+    <link rel="stylesheet" href="../Style/background_styles.css">
+    <link rel="stylesheet" href="../Style/styleladebalken.css">
     <script src="script.js" defer></script>
     <title>Progress Bar</title>
   </head>
